Actions
Bug #2208
closedSeems our find doesn't support the '-links' option, (as mandated by POSIX)
Start date:
2012-02-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Seems our find doesn't support the '-links' option, which is mandated by
POSIX: <http://pubs.opengroup.org/onlinepubs/009604599/utilities/find.html>.
GNU find does, though, which is leading to some odd behavior.
$ /usr/bin/find -links /usr/bin/find: illegal option -- l /usr/bin/find: [-E] [-H | -L] path-list predicate-list $ /usr/xpg4/bin/find -links /usr/xpg4/bin/find: illegal option -- l /usr/xpg4/bin/find: [-E] [-H | -L] path-list predicate-list $ /usr/gnu/bin/find -links /usr/gnu/bin/find: missing argument to `-links'
Updated by Yuri Pankov about 10 years ago
What do you mean by odd behavior? As for the primary itself, it's pretty easy to implement.
Updated by Rich Lowe about 10 years ago
- Category set to cmd - userland programs
- Status changed from New to Resolved
- Assignee set to Yuri Pankov
- % Done changed from 0 to 100
- Difficulty changed from Medium to Bite-size
- Tags deleted (
needs-triage)
Resolved in r13625 commit:2933dbe8e1a8
Actions